crank: update tag to latest 7.1 release
The previous commit aimed at updating to Crank 7.1, but the tags were
still pointing to 7.0.1 for 64-bit and 6.2 for 32-bit.

This commit fix that and points to 7.1 for both 32 and 64 bit.

Related-to: DWC-2583

Signed-off-by: Leonardo Graboski Veiga <leonardo.veiga@toradex.com>

--- a/crank/docker-compose.arm64.yml
+++ b/crank/docker-compose.arm64.yml
@@ -41,7 +41,7 @@ services:
         start_period: 10s
 
   crank:
-    image: cranksoftware/torizon_imx8:7_0_1
+    image: cranksoftware/torizon_imx8:7_1
     # Accept the EULA required to run imx8 vivante graphic drivers
     environment:
      - ACCEPT_FSL_EULA=1
