--- a/debian-container/demonstration/docker-compose.armhf-nogpu.yml
+++ b/debian-container/demonstration/docker-compose.armhf-nogpu.yml
@@ -4,6 +4,7 @@ services:
     image: torizon/weston:2
     # Required to get udev events from host udevd via netlink
     network_mode: host
+    ipc: host
     volumes:
       - type: bind
         source: /tmp
@@ -42,11 +43,11 @@ services:
         target: /var/run/docker.sock
 
   kiosk:
-    image: torizon/kiosk-mode-browser:2
-    platform: linux/arm
+    image: torizon/kiosk-mode-browser-x11:2
     security_opt:
       - seccomp:unconfined
     command: http://portainer:9000
+    ipc: host
     volumes:
       - type: bind
         source: /tmp
