--- a/gstreamer/bash/simple-pipeline/.gitlab-ci.yml
+++ b/gstreamer/bash/simple-pipeline/.gitlab-ci.yml
@@ -1,5 +1,9 @@
+variables:
+  DOCKERFILE_FOLDER: "gstreamer/bash/simple-pipeline/"
+
 # Stages
 stages:
+  - lint
   - build
   - build-multiarch
 
@@ -8,6 +12,11 @@ include:
   - /.gitlab-ci-scripts.yml
 
 # Jobs
+
+dockerfile-lint-gstreamer-simple-pipeline:
+  extends: .dockerfile-lint
+  stage: lint
+
 docker-build-gstreamer-simple-pipeline:
   extends: .docker-build
   before_script:
@@ -19,7 +28,6 @@ docker-build-gstreamer-simple-pipeline:
     IMAGE_NAME: arm32v7-sample-gstreamer-simple-pipeline
     IMAGE_ARCH: linux/arm/v7
     IMAGE_TAG: ${DEBIAN_RELEASE}-latest
-    DOCKERFILE_FOLDER: "gstreamer/bash/simple-pipeline/"
   stage: build
 
 docker-build-gstreamer-simple-pipeline-arm64v8:
@@ -33,7 +41,6 @@ docker-build-gstreamer-simple-pipeline-arm64v8:
     IMAGE_NAME: arm64v8-sample-gstreamer-simple-pipeline-vivante
     IMAGE_ARCH: linux/arm64/v8
     IMAGE_TAG: ${DEBIAN_RELEASE}-latest
-    DOCKERFILE_FOLDER: "gstreamer/bash/simple-pipeline/"
   stage: build
 
 docker-build-gstreamer-simple-pipeline-multiarch:
