--- a/adc/.gitlab-ci.yml
+++ b/adc/.gitlab-ci.yml
@@ -1,5 +1,9 @@
+variables:
+  DOCKERFILE_FOLDER: "adc/"
+
 # Stages
 stages:
+  - lint
   - build
   - build-multiarch
   - deploy
@@ -10,6 +14,11 @@ include:
   - /.gitlab-ci-scripts.yml
 
 # Jobs
+
+dockerfile-lint-adc:
+  extends: .dockerfile-lint
+  stage: lint
+
 docker-build-adc:
   extends: .docker-build
   before_script:
@@ -23,7 +32,6 @@ docker-build-adc:
     IMAGE_TAG: ${DEBIAN_RELEASE}-latest
     CROSS_TC_IMAGE_ARCH: armhf
     GCC_PREFIX: arm-linux-gnueabihf
-    DOCKERFILE_FOLDER: "adc/"
   stage: build
 
 docker-build-adc-arm64v8:
@@ -39,7 +47,6 @@ docker-build-adc-arm64v8:
     IMAGE_TAG: ${DEBIAN_RELEASE}-latest
     CROSS_TC_IMAGE_ARCH: arm64
     GCC_PREFIX: aarch64-linux-gnu
-    DOCKERFILE_FOLDER: "adc/"
   stage: build
 
 docker-build-adc-multiarch:
