--- a/opencv/.gitlab-ci.yml
+++ b/opencv/.gitlab-ci.yml
@@ -1,5 +1,9 @@
+variables:
+  DOCKERFILE_FOLDER: "opencv/"
+
 # Stages
 stages:
+  - lint
   - build
   - deploy
 
@@ -9,6 +13,11 @@ include:
 
 # Jobs
 # Only for 64-bit vivante arch
+
+dockerfile-lint-opencv:
+  extends: .dockerfile-lint
+  stage: lint
+
 docker-build-opencv-arm64v8:
   extends: .docker-build
   before_script:
@@ -20,7 +29,6 @@ docker-build-opencv-arm64v8:
     IMAGE_NAME: arm64v8-sample-opencv-vivante
     IMAGE_ARCH: linux/arm64/v8
     IMAGE_TAG: ${DEBIAN_RELEASE}-latest
-    DOCKERFILE_FOLDER: "opencv/"
   stage: build
 
 docker-deploy-opencv-arm64v8:
