improve quality of Dockerfiles
Follow best practices for writing Dockerfiles.

Related-to: TOR-1566

Signed-off-by: Dejan Jesenko <dejan.jesenko@toradex.com>

--- a/adc/Dockerfile
+++ b/adc/Dockerfile
@@ -24,4 +24,4 @@ FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG AS deploy-con
 # get the compiled program from the Build stage
 COPY --from=cross-container /project/build/* /usr/local/bin/
 
-CMD adc
+CMD ["adc"]
