--- a/dbus/python/Dockerfile
+++ b/dbus/python/Dockerfile
@@ -6,7 +6,7 @@ ARG DOCKER_REGISTRY=torizon
 FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
 
 # install required packages
-RUN apt-get -q -y update && apt-get -q -y install \
+RUN apt-get -q -y update && apt-get -q -y install --no-install-recommends \
     python python3-pip python-setuptools python3-wheel \
     pkg-config \
     dbus libdbus-1-dev \
@@ -15,7 +15,7 @@ RUN apt-get -q -y update && apt-get -q -y install \
     rm -rf /var/lib/apt/lists/*
 
 # uses pip to install python module (it needs compiler)
-RUN pip install dbus-python
+RUN pip install --no-cache-dir dbus-python
 
 # adds the sample scripts
 WORKDIR /root
@@ -24,4 +24,4 @@ COPY list-system-services.py /root/list-system-services.py
 COPY list-ip-addresses.py /root/list-ip-addresses.py
 
 # runs python interpreter as main process
-CMD python3
+CMD ["python3"]
