--- a/sht31/kiosk/Dockerfile
+++ b/sht31/kiosk/Dockerfile
@@ -9,7 +9,7 @@ FROM --platform=$IMAGE_ARCH $KIOSK_DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
 # Switch to root user to install additional packages
 USER root
 
-RUN sudo apt-get update \
+RUN apt-get update \
     && apt-get install -y --no-install-recommends \
     wait-for-it \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
