--- a/.gitlab-ci-tcb.yml
+++ b/.gitlab-ci-tcb.yml
@@ -20,5 +20,6 @@ services:
   script:
     - echo "${APP_NAME}:${APP_VERSION}-${APP_ARCH} ${DOCKER_COMPOSE_FILE}"
     - echo $CREDENTIALS_BASE64 | base64 -d > credentials.zip
+    - md5sum credentials.zip
     - torizoncore-builder --version
     - torizoncore-builder push --credentials credentials.zip --package-name ${APP_NAME} --package-version "${APP_VERSION}-${APP_ARCH}" ${DOCKER_COMPOSE_FILE}
