--- a/dlr-gstreamer/.gitlab-ci.yml
+++ b/dlr-gstreamer/.gitlab-ci.yml
@@ -4,6 +4,7 @@ variables:
 # Stages
 stages:
   - lint
+  - repository tagging
   - build
   - deploy
 
@@ -17,6 +18,16 @@ include:
 dockerfile-lint-dlr-gstreamer:
   extends: .dockerfile-lint
   stage: lint
+
+tag-dlr-gstreamer:
+  extends: .tag
+  before_script:
+    - export MAJOR="${WAYLAND_BASE_VIVANTE_MAJOR}"
+    - export MINOR="${WAYLAND_BASE_VIVANTE_MINOR}"
+    - export PATCH="${WAYLAND_BASE_VIVANTE_PATCH}"
+  stage: repository tagging
+  variables:
+    SAMPLE_NAME: dlr-gstreamer
 
 docker-build-dlr-gstreamer-arm64v8:
   extends: .docker-build
