--- a/gpio/c/.gitlab-ci.yml
+++ b/gpio/c/.gitlab-ci.yml
@@ -4,6 +4,7 @@ variables:
 # Stages
 stages:
   - lint
+  - repository tagging
   - build
   - build-multiarch
 
@@ -16,6 +17,16 @@ include:
 dockerfile-lint-gpio-c:
   extends: .dockerfile-lint
   stage: lint
+
+tag-gpio-c:
+  extends: .tag
+  before_script:
+    - export MAJOR="${DEBIAN_MAJOR}"
+    - export MINOR="${DEBIAN_MINOR}"
+    - export PATCH="${DEBIAN_PATCH}"
+  stage: repository tagging
+  variables:
+    SAMPLE_NAME: gpio-c
 
 docker-build-gpio-c:
   extends: .docker-build
