--- a/opencl/.gitlab-ci.yml
+++ b/opencl/.gitlab-ci.yml
@@ -4,6 +4,7 @@ variables:
 # Stages
 stages:
   - lint
+  - repository tagging
   - build
 
 # Scripts
@@ -16,6 +17,16 @@ include:
 dockerfile-lint-opencl:
   extends: .dockerfile-lint
   stage: lint
+
+tag-opencl:
+  extends: .tag
+  before_script:
+    - export MAJOR="${WAYLAND_BASE_VIVANTE_MAJOR}"
+    - export MINOR="${WAYLAND_BASE_VIVANTE_MINOR}"
+    - export PATCH="${WAYLAND_BASE_VIVANTE_PATCH}"
+  stage: repository tagging
+  variables:
+    SAMPLE_NAME: opencl
 
 docker-build-opencl-arm64v8:
   extends: .docker-build
