--- a/opencv/.gitlab-ci.yml
+++ b/opencv/.gitlab-ci.yml
@@ -4,6 +4,7 @@ variables:
 # Stages
 stages:
   - lint
+  - repository tagging
   - build
   - deploy
 
@@ -17,6 +18,16 @@ include:
 dockerfile-lint-opencv:
   extends: .dockerfile-lint
   stage: lint
+
+tag-opencv:
+  extends: .tag
+  before_script:
+    - export MAJOR="${WAYLAND_BASE_VIVANTE_MAJOR}"
+    - export MINOR="${WAYLAND_BASE_VIVANTE_MINOR}"
+    - export PATCH="${WAYLAND_BASE_VIVANTE_PATCH}"
+  stage: repository tagging
+  variables:
+    SAMPLE_NAME: opencv
 
 docker-build-opencv-arm64v8:
   extends: .docker-build
