--- a/python-qml/.gitlab-ci.yml
+++ b/python-qml/.gitlab-ci.yml
@@ -4,6 +4,7 @@ variables:
 # Stages
 stages:
   - lint
+  - repository tagging
   - build
   - build-multiarch
 
@@ -16,6 +17,26 @@ include:
 dockerfile-lint-qt5-python-qml:
   extends: .dockerfile-lint
   stage: lint
+
+tag-qt5-python-qml:
+  extends: .tag
+  before_script:
+    - export MAJOR="${QT5_WAYLAND_MAJOR}"
+    - export MINOR="${QT5_WAYLAND_MINOR}"
+    - export PATCH="${QT5_WAYLAND_PATCH}"
+  stage: repository tagging
+  variables:
+    SAMPLE_NAME: qt5-python-qml
+
+tag-qt5-python-qml-arm64v8-vivante:
+  extends: .tag
+  before_script:
+    - export MAJOR="${QT5_WAYLAND_VIVANTE_MAJOR}"
+    - export MINOR="${QT5_WAYLAND_VIVANTE_MINOR}"
+    - export PATCH="${QT5_WAYLAND_VIVANTE_PATCH}"
+  stage: repository tagging
+  variables:
+    SAMPLE_NAME: qt5-python-qml-arm64v8-vivante
 
 docker-build-qt5-python-qml:
   extends: .docker-build
