--- a/sht31/flaskapp/.gitlab-ci.yml
+++ b/sht31/flaskapp/.gitlab-ci.yml
@@ -4,6 +4,7 @@ variables:
 # Stages
 stages:
   - lint
+  - repository tagging
   - build
   - build-multiarch
 
@@ -16,6 +17,16 @@ include:
 dockerfile-lint-uart-sht31-flask-app:
   extends: .dockerfile-lint
   stage: lint
+
+tag-uart-sht31-flask-app:
+  extends: .tag
+  before_script:
+    - export MAJOR="${DEBIAN_MAJOR}"
+    - export MINOR="${DEBIAN_MINOR}"
+    - export PATCH="${DEBIAN_PATCH}"
+  stage: repository tagging
+  variables:
+    SAMPLE_NAME: uart-sht31-flask-app
 
 docker-build-uart-sht31-flask-app:
   extends: .docker-build
