gitlab-ci.yml: reintroduce container tags for kiosk-mode-browser
Reintroduce container tags for kiosk-mode-browser,
because they were mistakenly deleted in the previous
commit ad307a0b.

Related-to: TOR-1942

Signed-off-by: Dejan Jesenko <dejan.jesenko@toradex.com>

--- a/.gitlab-ci-scripts.yml
+++ b/.gitlab-ci-scripts.yml
@@ -59,6 +59,10 @@ variables:
   GRAPHICS_TESTS_VIVANTE_MINOR: "3"
   GRAPHICS_TESTS_VIVANTE_PATCH: "0"
 
+  KIOSK_MODE_BROWSER_MAJOR: "2"
+  KIOSK_MODE_BROWSER_MINOR: "5"
+  KIOSK_MODE_BROWSER_PATCH: "0"
+
   # This should be set by docker image already, just to be sure...
   DOCKER_HOST: tcp://docker:2375
   # Use overlayfs driver for better performance
