use chromium instead of kiosk-mode-browser
Since we splitted kiosk-mode-browser container
in two, let's use Chromium container instead.

Related-to: TOR-2239

Signed-off-by: Dejan Jesenko <dejan.jesenko@toradex.com>

--- a/debian-container/demonstration/docker-compose.armhf-nogpu.yml
+++ b/debian-container/demonstration/docker-compose.armhf-nogpu.yml
@@ -43,7 +43,7 @@ services:
         target: /var/run/docker.sock
 
   kiosk:
-    image: torizon/kiosk-mode-browser-x11:2
+    image: torizon/chromium-x11:2
     security_opt:
       - seccomp:unconfined
     command: http://portainer:9000
