--- a/.gitlab-ci-tcb.yml
+++ b/.gitlab-ci-tcb.yml
@@ -19,6 +19,9 @@ services:
     entrypoint: [ "" ]
   script:
     - echo "${APP_NAME}:${APP_VERSION}-${APP_ARCH} ${DOCKER_COMPOSE_FILE}"
+    # When running pipeline on your fork, you have to download the credentials file from app.torizon.io,
+    # make it a base 64 string with "base64 credentials.zip --wrap=0 > credential-base64.txt"
+    # and add the variable to your CI/CD variables.
     - echo $CREDENTIALS_BASE64 | base64 -d > credentials.zip
     - md5sum credentials.zip
     - torizoncore-builder --version
