--- a/debian-container/demonstration/docker-compose.arm64.yml
+++ b/debian-container/demonstration/docker-compose.arm64.yml
@@ -47,7 +47,7 @@ services:
         target: /var/run/docker.sock
 
   kiosk:
-    image: torizon/kiosk-mode-browser:2
+    image: torizon/chromium:2
     platform: linux/arm64
     security_opt:
       - seccomp:unconfined
